--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+h1 {
+    text-align: center;
+    margin-top: 20px;
+}
+body {
+    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+    color: white;
+    font-family: "Poppins", sans-serif;
+    min-height: 100vh;
+}
+header {
+    font-size: 1rem;
+}
+header,
+form {
+    min-height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#delete-completed {
+    padding: 0.5rem;
+    font-size: 1.8rem;
+    border: none;
+    background: #ff6f47;
+    color: white;
+}
+#delete-completed:hover {
+    background: white;
+    color: #ff6f47;
+}
+form input,
+form button {
+    padding: 0.5rem;
+    font-size: 1.8rem;
+    border: none;
+    background: white;
+}
+form button {
+    color: #ff6f47;
+    background: #f7fffe;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+form button:hover {
+    background: #ff6f47;
+    color: white;
+}
+.todo button {
+    background-color: white;
+    font-size: 1.5rem;
+    border: none;
+}
+.todo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.todo-list {
+    min-width: 30%;
+    list-style: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todo {
+    margin: 0.5rem;
+    padding: 0.5rem;
+    background: white;
+    font-size: 1.8rem;
+    color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 1s ease;
+}
+.filter-todo {
+    padding: 1rem;
+}
+.todo li {
+    flex: 1;
+
+}
+.todo-item {
+    padding: 0rem 0.5rem;
+}
+.fa-complete   {
+    color: green;
+    size: A4;
+    margin-right: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fa-incomplete  {
+    color: gray;
+    opacity: 0.5;
+    size: A4;
+    margin-right: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.fa-delete {
+    color:tomato;
+    size:A4;
 }
-
-.App-link {
-  color: #61dafb;
+.select {
+    margin: 1rem;
+    position: relative;
+    overflow: hidden;
 }
+select {
+    color: #ff6f47;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    width: 20rem;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+/* Arrow */
+.select::after {
+    content: "\25BC";
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    background: #ff6f47;
+    cursor: pointer;
+    pointer-events: none;
 }
